--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "devDependencies": {
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.5",
+        "sass": "^1.64.1",
         "vite": "^4.0.0"
     },
     "dependencies": {
@@ -16,6 +17,8 @@
         "@fortawesome/free-regular-svg-icons": "^6.4.0",
         "@fortawesome/free-solid-svg-icons": "^6.4.0",
         "@fortawesome/vue-fontawesome": "^3.0.3",
+        "@popperjs/core": "^2.11.8",
+        "bootstrap": "^5.3.1",
         "vue": "^3.3.4"
     }
 }
