--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "watch": "vite preview"
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
+        "@vitejs/plugin-vue": "^4.2.3",
         "alpinejs": "^3.4.2",
         "autoprefixer": "^10.4.2",
         "axios": "^1.1.2",
@@ -24,6 +26,8 @@
         "@fortawesome/vue-fontawesome": "^3.0.3",
         "@popperjs/core": "^2.11.8",
         "bootstrap": "^5.3.1",
-        "vue": "^3.3.4"
+        "jquery": "^3.7.0",
+        "vue": "^3.3.4",
+        "vue-loader": "^17.2.2"
     }
 }
