--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@fortawesome/vue-fontawesome": "^3.0.3",
         "@popperjs/core": "^2.11.8",
         "bootstrap": "^5.3.1",
+        "dayjs": "^1.11.9",
         "jquery": "^3.7.0",
         "vue": "^3.3.4",
         "vue-loader": "^17.2.2"
